kubernetes/apps/default/rabbitmq/resources/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - rabbitmq.dartus.fr
      secretName: rabbitmq.dartus.fr-tls
  rules:
    - host: rabbitmq.dartus.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbit-cluster
                port:
                  number: 15672
